# toolforge-jobs-api

./: .flake8  .gitignore  .gitlab-ci.yml  .gitreview  .pre-commit-config.yaml  Makefile  README.md  api.py  config.py  deploy.sh  pyproject.toml  requirements.txt  tox.ini
.pipeline/: blubber.yaml
deployment/: helmfile.yaml
deployment/chart/: Chart.yaml  values.yaml
deployment/chart/crds/: continuous-job.yaml  one-off-job.yaml  scheduled-job.yaml
deployment/chart/templates/: api-gateway-certificate.yaml.tpl  clusterrole.yaml.tpl  clusterrolebinding.yaml.tpl  deployment.yaml.tpl  nginx-config.yaml.tpl  role.yaml.tpl
openapi/: openapi.yaml
tests/: README.md  cmd-checklist-runner.py  cmd-checklist.yaml  conftest.py  fake_k8s.py  test_app.py  test_command.py  test_core.py  test_cron.py  test_health_check.py  test_images.py  test_job.py  test_k8s_errors.py  test_loki_logs.py  test_ops_status.py  test_quota.py  test_user.py  test_utils.py  utils.py
tests/api/: test_app.py  test_auth.py  test_error.py  test_healthz.py  test_images.py  test_models.py  test_openapi.py  test_quota.py
tests/core/: test_images.py
tests/helpers/: fake_k8s.py  fakes.py
tests/helpers/fixtures/cronjobs/: cronjob_failed.json  cronjob_pending_initializing.json  cronjob_pending_restarting.json  cronjob_pending_scheduling.json  cronjob_running.json  cronjob_succeeded.json  cronjob_unknown.json  daily_cronjob.json
tests/helpers/fixtures/deployments/: deployment-simple-buildpack-noargs.json  deployment-simple-buildpack.json  deployment-simple-buildservice-noargs.json  deployment-simple-buildservice-with-healthcheck.json  deployment_failed.json  deployment_pending_initializing.json  deployment_pending_restarting.json  deployment_pending_scheduling.json  deployment_restarting.json  deployment_running.json  deployment_unknown.json
tests/helpers/fixtures/errors/: already-exists.json  quota.json
tests/helpers/fixtures/events/: failed_to_create_pod_exceeded_quota_event.json
tests/helpers/fixtures/jobs/: daily_cronjob.json  (+11 more)
tests/runtimes/k8s/: test_command.py  test_health_check.py  test_httproute.py  test_images.py  test_ingress.py  test_jobs.py  test_ops.py  test_ops_status.py  test_ops_status_deprecated.py  test_runtime.py  test_status.py  test_status_deprecated.py  test_utils.py
tests/storages/k8s/: test_storage.py
tjf/: app.py  command.py  cron.py  delete.py  error.py  flush.py  health_check.py  images.py  job.py  jobkind.py  k8s_errors.py  labels.py  list.py  logs.py  loki_logs.py  ops.py  ops_status.py  quota.py  settings.py  show.py  user.py  utils.py
tjf/api/: app.py  auth.py  error.py  healthz.py  image_list.py  images.py  job.py  job_list.py  job_restart.py  jobs.py  logs.py  metrics.py  models.py  openapi.py  quota.py  quotas.py  restart.py  run.py  utils.py
tjf/core/: command.py  core.py  cron.py  error.py  health_check.py  images.py  job.py  models.py  quota.py  utils.py
tjf/runtimes/: base.py  exceptions.py
tjf/runtimes/k8s/: account.py  command.py  exec.py  healthchecks.py  httproute.py  images.py  ingress.py  jobs.py  k8s_errors.py  labels.py  ops.py  ops_status.py  ops_status_deprecated.py  runtime.py  services.py  status.py  status_deprecated.py  utils.py
tjf/storages/: base.py  exceptions.py
tjf/storages/k8s/: storage.py
(+10 files in other folders)
