[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tjf"
version = "0.0.1"
description = ""
authors = ["Taavi Väänänen <hi@taavi.wtf>"]
license = "AGPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
prometheus-flask-exporter = "^0.23.0"
pyyaml = "^6.0.1"
requests = "^2.31.0"
cryptography = "^41.0.7"
toolforge-weld = "^1.4.0"
gunicorn = "^21.2.0"
pydantic = "^2.6.4"

[tool.poetry.group.dev.dependencies]
openapi-schema-validator = "^0.6.2"

[tool.black]
line-length = 99
target-version = ['py311']

[tool.isort]
profile = "black"
skip_gitignore = true
