[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "tjf"
version = "4.6.6"
description = ""
authors = [{ name = "Taavi Väänänen", email = "hi@taavi.wtf" }]
license = "AGPL-3.0-or-later"
readme = "README.md"
requires-python = "~=3.13"


dependencies = [
  "pyyaml (>=6.0.1,<7.0.0)",
  "requests (>=2.31.0,<3.0.0)",
  "toolforge-weld (>=1.6.12,<2.0.0)",
  "pydantic (>=2.6.4,<3.0.0)",
  "gevent (>=24.2.1,<25.0.0)",
  "fastapi (>=0.116.1,<0.117.0)",
  "prometheus-fastapi-instrumentator (>=7.1.0,<8.0.0)",
  "uvicorn (>=0.35.0,<0.36.0)",
  "websockets (>=15.0.1,<16.0.0)",
  "pydantic-settings (>=2.10.1,<3.0.0)",
  "anyio (>=4.10.0,<5.0.0)",
  "kubernetes (>=34.1.0,<35.0.0)",
  "croniter (>=6.0.0,<7.0.0)",
  "httpx (>=0.28.1,<0.29.0)"
]

[dependency-groups]
dev = [
    "openapi-schema-validator (>=0.6.2,<0.7.0)",
    "types-requests (>=2.32.0.20250306,<3.0.0.0)",
    "types-pyyaml (>=6.0.12.20250326,<7.0.0.0)",
    "types-setuptools (>=76.0.0.20250313,<77.0.0.0)",
    "prometheus-client (>=0.21.1,<0.22.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "requests-mock (>=1.12.1,<2.0.0)",
    "typing-extensions (>=4.14.0,<5.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "types-croniter (>=6.0.0.20250809,<7.0.0.0)",
    "types-python-dateutil (>=2.9.0.20250822,<3.0.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "freezegun (>=1.5.5,<2.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "pre-commit (>=4.6.0,<5.0.0)"
]

[tool.ruff.lint]
extend-select = ["I"] # add isort
